--- a/templates/crearUsuario.html
+++ b/templates/crearUsuario.html
@@ -1,1 +1,7 @@
 <div>
+    <form>
+        <input name:"id" type="text" placeholder="Nmbre de usuario" id="input" class="">
+        <input name="nombres" type="text" placeholder="Nombres" id="input" class="">
+        <input name="apellidos" type="text" placeholder="Apellidos" id="input" class="">
+    </form>
+</div>
