Terminé lo que me dijo

--- a/templates/crearUsuario.html
+++ b/templates/crearUsuario.html
@@ -1,10 +1,9 @@
 <div>
     <form>
-        <input name:"id" type="text" placeholder="Nmbre de usuario" id="input" class="">
+        <input name:"id" type="text" placeholder="Nombre de usuario" id="input" class="">
         <input name="nombres" type="text" placeholder="Nombres" id="input" class="">
         <input name="apellidos" type="text" placeholder="Apellidos" id="input" class="">
-        <input name="apellidos" type="text" placeholder="Apellidos" id="input" class="">
-        
-        
+        <input name="contraseña" type="password" placeholder="Constraseña" id="input" class="">
+        <input name="correoElectronico" type="email" placeholder="Correo Electrónico" id="input" class="">
     </form>
 </div>
