Agrego unas cosas de lógica

--- a/templates/template.html
+++ b/templates/template.html
@@ -49,9 +49,9 @@
                             <br>
                             <input id="button" type="button" value="Entrar">
                         </form>
-                        <a class="menuText">Olvidaste la contraseña?</a>
+                        <a class="menuText"  href"#" >Olvidaste la contraseña?</a>
                         <br>
-                        <a class="menuText">No tienes usuario?</a>
+                        <a  class="menuText" href="registroUsuario.php">No tienes usuario? ¡Registrate!</a>
                         </div></li>
                 </ul>
             </nav>
