--- a/templates/registroUsuario.html
+++ b/templates/registroUsuario.html
@@ -1,1 +1,20 @@
-<div>
+<form id="formularioRegistro" action="" method="post">
+    <fieldset>
+        <legend> <b>  Datos de sesión </b><hr> </legend>
+        <input name="id" type="text" placeholder="Nombre de usuario" id="inputRegistro" class="input" required>
+        <input name="nombres" type="text" placeholder="Nombres" id="inputRegistro" class="input" required>
+        <input name="apellidos" type="text" placeholder="Apellidos" id="inputRegistro" class="input" required>
+        <input name="correoElectronico" type="email" placeholder="Correo electrónico" id="inputRegistro" class="input" required>
+        <input name="contraseña1" type="password" placeholder="Contraseña" id="inputRegistro" class="input" required>
+        <input name="contraseña2" type="password" placeholder="Confirmar contraseña" id="inputRegistro" class="input" required>
+    </fieldset>
+    <fieldset>
+        <legend> <b>  Datos personales </b><hr> </legend>
+        <input name="direccion" type="text" placeholder="Dirección" id="inputRegistro" class="input" required>
+        <input name="ciudad" type="text" placeholder="Ciudad" id="inputRegistro" class="input" required>
+        <input name="telefono" type="number" placeholder="Teléfono" id="inputRegistro" class="input">
+        <input name="celular" type="number" placeholder="Celular" id="inputRegistro" class="input" required>
+    </fieldset>
+    <input id="buttonRegistro" class="button" type="submit" value="Registrarse">
+    <input id="buttonRegistro" class="button" type="reset" value="Reestablecer campos">
+</form>
