--- a/templates/registroUsuario.html
+++ b/templates/registroUsuario.html
@@ -1,6 +1,6 @@
 <form id="formularioRegistro" action="" method="post">
     <fieldset>
-        <legend> <b>  Datos de sesión </b><hr> </legend>
+        <legend> <b>  Datos de sesión: </b><hr> </legend>
         <input name="id" type="text" placeholder="Nombre de usuario" id="inputRegistro" class="input" required>
         <input name="nombres" type="text" placeholder="Nombres" id="inputRegistro" class="input" required>
         <input name="apellidos" type="text" placeholder="Apellidos" id="inputRegistro" class="input" required>
@@ -9,7 +9,7 @@
         <input name="contraseña2" type="password" placeholder="Confirmar contraseña" id="inputRegistro" class="input" required>
     </fieldset>
     <fieldset>
-        <legend> <b>  Datos personales </b><hr> </legend>
+        <legend> <b>  Datos personales: </b><hr> </legend>
         <input name="direccion" type="text" placeholder="Dirección" id="inputRegistro" class="input" required>
         <input name="ciudad" type="text" placeholder="Ciudad" id="inputRegistro" class="input" required>
         <input name="telefono" type="number" placeholder="Teléfono" id="inputRegistro" class="input">
