--- a/templates/template.html
+++ b/templates/template.html
@@ -52,7 +52,8 @@
                         </form>
                         <a class="menuText"  href"#" >Olvidaste la contraseña?</a>
                         <br>
-                        <a  class="menuText" href="registroUsuario.php">No tienes usuario? ¡Registrate!</a>
+                        <br>
+                        <a  class="menuText" href="registroUsuario.php">¿No tienes usuario? ¡Registrate!</a>
                         </div></li>
                 </ul>
             </nav>
