--- a/templates/css/stylesheet.css
+++ b/templates/css/stylesheet.css
@@ -45,7 +45,7 @@ nav ul li{
     padding: 20px 20px 20px 20px;
     display:none;
     width: 20%;
-    height: 280%;
+    height: 305%;
     text-align:center;
     box-shadow: 0px 0px 4px rgba(0,0,0,0.6);
     position:absolute;
@@ -77,11 +77,23 @@ nav ul li{
 }
 #buttonSesion{
     font-size: 18px;
-    width: 50%;
+    width: 40%;
 }
 #buttonRegistro{
     font-size: 20px;
-    width: 30%;
+    width: 25%;
+}
+
+fieldset{
+    border:none;
+
+}
+legend{
+    font-family:amaranthregular;
+    font-size:18px;
+    text-align:left;
+    margin-left:80px;
+    margin-bottom:25px;
 }
 
 
