--- a/templates/template.html
+++ b/templates/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
     <head lang="es">
-        <title>Inicio</title>
+        <title>{titulo}</title>
         <meta charset="utf-8">
         <link type="text/css" rel="stylesheet" href="templates/css/stylesheet.css">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
