--- a/templates/registroUsuario.html
+++ b/templates/registroUsuario.html
@@ -1,7 +1,7 @@
-<form id="formularioRegistro" action="" method="post">
+<form id="formularioRegistro" method="post">
     <fieldset>
         <legend> <b>  Datos de sesión: </b><hr> </legend>
-        <input name="id" type="text" placeholder="Nombre de usuario" id="inputRegistro" class="input" required>
+        <input name="nombreUsuarioRegistro" type="text" placeholder="Nombre de usuario" id="inputRegistro" class="input" required>
         <input name="nombres" type="text" placeholder="Nombres" id="inputRegistro" class="input" required>
         <input name="apellidos" type="text" placeholder="Apellidos" id="inputRegistro" class="input" required>
         <input name="correoElectronico" type="email" placeholder="Correo electrónico" id="inputRegistro" class="input" required>
@@ -17,4 +17,5 @@
     </fieldset>
     <input id="buttonRegistro" class="button" type="submit" value="Registrarse">
     <input id="buttonRegistro" class="button" type="reset" value="Reestablecer campos">
+    <div id = "mensajeRegistro"></div>
 </form>
