Ajax casi terminado, falta poco para crear usuarios

--- a/templates/iniciarSesion.html
+++ b/templates/iniciarSesion.html
@@ -1,13 +1,14 @@
-<form  id="iniciarSesion" style:"z-index:2;">
+<form  id="iniciarSesion" class="iniciarSesion" action="hola.html">
     <input id="inputSesion" class="input"name="nombreUsuario" type="text" placeholder="Usuario" required>
     <br>
     <input id="inputSesion" class="input" name="contraseña" type="password" placeholder="Contraseña" required>
     <br>
-    <input id="buttonSesion" class="button" type="button" value="Entrar">
+    <input id="buttonSesion" class="button" type="submit" value="Entrar">
 </form>
-<a class="menuText"  href"#" >Olvidaste la contraseña?</a>
+<a class="menuText" href"#" >Olvidaste la contraseña?</a>
 <br>
 <br>
 <a  class="menuText" href="registroUsuario.php">¿No tienes usuario? ¡Registrate!</a>
-<div id="mensaje">
+<br>
+<div id="mensaje" class="menuText">
 </div>
