--- a/templates/registroUsuario.html
+++ b/templates/registroUsuario.html
@@ -1,4 +1,4 @@
-<form id="formularioRegistro" method="post">
+<form id= "formularioRegistro" class= "registro" action="asdasdasd.html">
     <fieldset>
         <legend> <b>  Datos de sesión: </b><hr> </legend>
         <input name="nombreUsuarioRegistro" type="text" placeholder="Nombre de usuario" id="inputRegistro" class="input" required>
