Añado cosas a AJAX

--- a/templates/registroUsuario.html
+++ b/templates/registroUsuario.html
@@ -17,5 +17,5 @@
     </fieldset>
     <input id="buttonRegistro" class="button" type="submit" value="Registrarse">
     <input id="buttonRegistro" class="button" type="reset" value="Reestablecer campos">
-    <div id = "mensajeRegistro"></div>
+    <div id = "mensajeRegistro">Hola e.e</div>
 </form>
